--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -105,8 +105,8 @@ TrimTree=/dev/:/proc/:/tmp/:/dos/:/a/
 #         %\  -- use backslashes for %f and %F (DOS only)
 
 ux=VIEW pic,INS,.jpg.jpeg.gif.xpm.png.bmp.pnm.tif.tiff.JPG.GIF.XPM.PNG.BMP.TIF.tbn., qiv -m -f "%f" & #-l
-#ux=VIEW pic,INS,.thm.THM., feh "%F" 
-#feh -F  "%F" 2>/dev/null & 
+#ux=VIEW pic,INS,.thm.THM., feh "%F"
+#feh -F  "%F" 2>/dev/null &
 ux=VIEW doc,INS,.doc.DOC.docx.xls.xlsx.XLS.ppt.PPT.pptx.PPTX.rtf.RTF.odt.odg.ods.sxw.sxc.sxd.,ooffice "%f" 1> /dev/null 2> /dev/null &
 ux=VIEW PDF,INS,.pdf.PDF.,pdf "%f" 1> /dev/null 2> /dev/null &
 ux=VIEW PS,INS,.ps.,gv "%f"&
@@ -125,22 +125,22 @@ ux=PLAY dir,INS,.[].<>.,mplayer -zoom -fs "%f"/*
 
 ux=info,F4,.mp3.,mp3info -r a -x "%F" %w
 ux=info,F4,.flac.FLAC.,metaflac --export-tags-to=- "%F" %w
-ux=truncate,F5,.mp3.flac.avi.mkv.,truncate -s 0 "%F" 
+ux=truncate,F5,.mp3.flac.avi.mkv.,truncate -s 0 "%F"
 ux=filmdir,F5,.[].<>.,filmdir.sh "%F" %w
 ux=sumtim,F6,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,sumtim2.py -v "%F" %w
 ux=FILE INFO,F8,*,file -L "%f" %w
-#ux=srezopis,F9,.flac.,~/src/bin/biblioteka/srez4opis.py "%f" 
-#ux=symmvsrc,F9,.[].<>., ~/src/bin/filedir/sym.py --mv --src --dellink --deldest "%f"/* "%f"/ 
-ux=renamopis,F9,.[].<>.,renfilesopis "%F" 
-ux=renamopis,F9,.flac.wav.cut.size.findm.,renfilesopis . 
-ux=renamopis,F10,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png,mkdir -p ./ok/okk ; pkill -f "^vim.*%c" 
-ux=playends,F7,.flac.wav.mp3.,~/src/bin/audio/playendsox "%f" 
+#ux=srezopis,F9,.flac.,~/src/bin/biblioteka/srez4opis.py "%f"
+#ux=symmvsrc,F9,.[].<>., ~/src/bin/filedir/sym.py --mv --src --dellink --deldest "%f"/* "%f"/
+ux=renamopis,F9,.[].<>.,renfilesopis "%F"
+ux=renamopis,F9,.flac.wav.cut.size.findm.,renfilesopis .
+ux=renamopis,F10,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png,mkdir -p ./ok/okk ; pkill -f "^vim.*%c"
+ux=delout-r-c,F11,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png,rm *++.png *.cmp *.cmp?r *-[rc].out[-.]*
+ux=playends,F7,.flac.wav.mp3.,~/src/bin/audio/playendsox "%f"
+ux=editzapis,F12,*,myterm vim "%F" opis ~/src/gramo/abbr &
 # edit
 ux=EDIT pic,F7,.gif.tiff.jpg.png.,gimp "%f" 2> /dev/null 1> /dev/null %n &
 ux=EDIT doc,F7,.doc.DOC.xls.XLS.ppt.PPT.odt.odg.,ooffice "%f" &
 ux=EDIT any,F7,*,gvim "%f" &
-#ux=EDITmany,F10,*,myterm vim "%f" &
-ux=EDITzvuk,F12,*,myterm vim "%F" opis ~/src/gramo/abbr &
 
 # following user commands are bound to the UserMenu -- key `u'
 # note that instead of keyname there's `menu' string!
@@ -148,7 +148,7 @@ ux=EDITzvuk,F12,*,myterm vim "%F" opis ~/src/gramo/abbr &
 #
 ux=lLocate file,menu,*,locate %? %w
 ux=---,menu,*,
-ux=dmpdvd:  dvdplay,menu,*,mpdvd "%f" 
+ux=dmpdvd:  dvdplay,menu,*,mpdvd "%f"
 ux=ompg123: Stop,menu,*,killall -TERM mpg123 1> /dev/null 2> /dev/null &
 ux=smpg123: Suspend,menu,*,killall -STOP mpg123 1> /dev/null 2> /dev/null &
 ux=cmpg123: Continue,menu,*,killall -CONT mpg123 1> /dev/null 2> /dev/null &
@@ -212,12 +212,12 @@ see=*.vob,filmid.sh "%f"
 see=*.flac,filmid.sh "%f"
 see=*.aac,filmid.sh "%f"
 see=*.ape,filmid.sh "%f"
-see=*.png,file -L "%f" 
-see=*.pnm,pnmfile "%f" 
-see=*.jpg,jhead "%f" 
-see=*.JPG,jhead "%f" 
-see=*.jpeg,jhead "%f" 
-see=*.tbn,jhead "%f" 
+see=*.png,file -L "%f"
+see=*.pnm,pnmfile "%f"
+see=*.jpg,jhead "%f"
+see=*.JPG,jhead "%f"
+see=*.jpeg,jhead "%f"
+see=*.tbn,jhead "%f"
 see=*.torrent,btshowmetainfo "%f"
 see=*.torrent.added,btshowmetainfo "%f"
 
