--- a/qini/tun/etc/samba/smb.conf
+++ b/qini/tun/etc/samba/smb.conf
@@ -27,7 +27,7 @@ unix extensions = yes
 
 ## Browsing/Identification ###
 
-netbios name = <the_name_of_server_as_would_be_seen>
+netbios name = THE_NAME_OF_SERVER_AS_WOULD_BE_SEEN
 
 # Change this to the workgroup/NT-domain name your Samba server will part of
    workgroup = WORKGROUP
@@ -332,11 +332,11 @@ netbios name = <the_name_of_server_as_would_be_seen>
 ;   postexec = /bin/umount /cdrom
 
 
-[-name-ro1]
+[-name-readonly1]
  path= /path/...
  read only = yes
  guest ok = yes
-[-name-ro2]
+[-name-readonly2]
  path= /path/..
  read only = yes
  guest ok = yes
