--- a/filedir/vfu/cc/makefile
+++ b/filedir/vfu/cc/makefile
@@ -1,36 +1,16 @@
-export CCDEF=-D_FILE_OFFSET_BITS=64
-
-### MAKEMAKE STARTS HERE #######################################################
-
-
-### Created by makemake.pl on Sun Dec 15 20:23:25 2002 #########################
-
+export CCDEF=-D_FILE_OFFSET_BITS=64 -fpermissive
 
 ### GLOBAL TARGETS #############################################################
-
 default: all
-
 re: rebuild
-
 li: link
-
 all: modules
-
 clean: clean-modules
-
 rebuild: rebuild-modules
-
 link: link-modules
 
-### GLOBAL (AND USER) DEFS #####################################################
-
-
-AR = ar rv
-CC = gcc
-LD = gcc
 MKDIR = mkdir -p
 MODULES = vslib vfu
-RANLIB = ranlib
 RMDIR = rm -rf
 RMFILE = rm -f
 SRC = *.c *.cpp *.cc *.cxx
