--- a/qini/_mplayer/input.conf
+++ b/qini/_mplayer/input.conf
@@ -5,9 +5,18 @@ LEFT  seek -4
 
 UP    seek +10
 DOWN  seek -10
+]     seek +10
+[     seek -10
 
 HOME  seek +60
 END   seek -60
+}     seek +60
+{     seek -60
+
+PGUP  seek +300
+PGDWN seek -300
+)     seek +300
+(     seek -300
 
 0x448 speed -0.1
 0x449 speed +0.1
