--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -25,6 +25,7 @@ Diff=diff -u
 # handling is done via rx_* scripts! but not by VFU itself
 #XXX add here - then add it to rx_auto
 Archive=*.zip
+Archive=*.7z
 Archive=*.ZIP
 Archive=*.arj
 Archive=*.ARJ
@@ -104,7 +105,7 @@ TrimTree=/dev/:/proc/:/tmp/:/dos/:/a/
 #         %_  -- use short file names (SFN) for %f and %F (DOS only)
 #         %\  -- use backslashes for %f and %F (DOS only)
 
-ux=VIEW pic,INS,.jpg.jpeg.gif.xpm.png.bmp.pnm.tif.tiff.JPG.GIF.XPM.PNG.BMP.TIF.tbn., qiv -m -f "%f" & #-l
+ux=VIEW pic,INS,.jpg.jpeg.gif.xpm.png.bmp.pnm.tif.tiff.JPG.GIF.XPM.PNG.BMP.TIF.tbn., pqiv -f "%f" & #-l
 #ux=VIEW pic,INS,.thm.THM., feh "%F"
 #feh -F  "%F" 2>/dev/null &
 ux=VIEW doc,INS,.doc.DOC.docx.xls.xlsx.XLS.ppt.PPT.pptx.PPTX.rtf.RTF.odt.odg.ods.sxw.sxc.sxd.,ooffice "%f" 1> /dev/null 2> /dev/null &
@@ -121,8 +122,9 @@ ux=PLAY Media,INS,.mpg.vob.mpeg.asf.avi.AVI.flv.fli.mov.MOV.mkv.m2ts.ts.wmv.swf.
 ux=PLAY Media,INS,.mp3.mp36.ac3.m4a.mpc.wav.wv.ogg.wma.flac.aac.ape.mka.,mplayer -novideo -noautosub "%f"  2> /dev/null
 ux=PLAY REAL,INS,.rm.,realplay "%f"  1> /dev/null 2> /dev/null &
 #ux=PLAY Ape,INS,.ape.,mac "%f" - -d | play -t wav -
-ux=PLAY dir,INS,.[].<>.,mplayer -zoom -fs "%f"/*
+ux=PLAY dir,INS,.[].<>., xdotool  getactivewindow set_window --name mplayer ; mplayer -zoom -fs "%f"/*
 
+ux=split,F3,.flac.ape.wav.cue.,bash -ci 'any2flacsplit_forall "%c"'
 ux=info,F4,.mp3.,mp3info -r a -x "%F" %w
 ux=info,F4,.flac.FLAC.,metaflac --export-tags-to=- "%F" %w
 ux=truncate,F5,.mp3.flac.avi.mkv.,truncate -s 0 "%F"
@@ -133,10 +135,12 @@ ux=FILE INFO,F8,*,file -L "%f" %w
 #ux=symmvsrc,F9,.[].<>., ~/src/bin/filedir/sym.py --mv --src --dellink --deldest "%f"/* "%f"/
 ux=renamopis,F9,.[].<>.,renfilesopis "%F"
 ux=renamopis,F9,.flac.wav.cut.size.findm.,renfilesopis .
-ux=renamopis,F10,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png,mkdir -p ./ok/okk ; pkill -f "^vim.*%c"
-ux=delout-r-c,F11,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png,rm *++.png *.cmp *.cmp?r *-[rc].out[-.]*
+ux=okkzapis,F10,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png,mkdir -p ./ok/ ; pkill -f "^vim -c .*"`echo "%c" | sed "s/[+ ]/./g"`
+ux=delout-r-c,F11,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png,ls *-b.out.* && rm *++.png *.cmp *.cmp?r *-[rc].out[-.]*
 ux=playends,F7,.flac.wav.mp3.,~/src/bin/audio/playendsox "%f"
-ux=editzapis,F12,*,myterm vim "%F" opis ~/src/gramo/abbr &
+ux=rendiropis,F7,.[].,rendiropis.py --move --chasti=- "%f"
+ux=editzapis,F12,.wav.flac.,myterm vim -c "argdelete *" _size opis ~/src/gramo/abbr "%c"/a &
+ux=editzapis,F12,*,myterm vim -c "argdelete *" "%F" opis ~/src/gramo/abbr &
 # edit
 ux=EDIT pic,F7,.gif.tiff.jpg.png.,gimp "%f" 2> /dev/null 1> /dev/null %n &
 ux=EDIT doc,F7,.doc.DOC.xls.XLS.ppt.PPT.odt.odg.,ooffice "%f" &
