--- a/qini/_mplayer/input.conf
+++ b/qini/_mplayer/input.conf
@@ -10,8 +10,8 @@ DOWN  seek -10
 
 HOME  seek +60
 END   seek -60
-}     seek +60
-{     seek -60
+#}     seek +60
+#{     seek -60
 
 PGUP  seek +300
 PGDWN seek -300
