--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -203,7 +203,7 @@ see=*.fli,filmid.sh "%f"
 see=*.mov,filmid.sh "%f"
 see=*.MOV,filmid.sh "%f"
 see=*.m2ts,filmid.sh "%f"
-see=*.ts,filmid.sh "%f"
+#see=*.ts,filmid.sh "%f"  #but also typescript
 see=*.mk[av],filmid.sh "%f"
 see=*.m4[av],filmid.sh "%f"
 see=*.[mM][pP]4,filmid.sh "%f"
@@ -219,6 +219,7 @@ see=*.ape,filmid.sh "%f"
 see=*.png,file -L "%f"
 see=*.pnm,pnmfile "%f"
 see=*.jpg,jhead "%f"
+see=*.[Cc][Rr]2,dcraw -i -v "%f"
 see=*.JPG,jhead "%f"
 see=*.jpeg,jhead "%f"
 see=*.tbn,jhead "%f"
